# Stereo-Vision-Pipline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindLibSGM.cmake
config/: cam_left.yml  cam_right.yml  extrinsic.yml  left.yaml  result.yml  right.yaml
matlab/: calibration.m  calibrationSession.mat  matlab2opencv.m  matlab_calib_2_opencv.m  test.m
src/: CMakeLists.txt  depth.cpp  get_photos.cpp  rectification.cpp
